force-app/main/default/objects/EDI_Error_Mapping__mdt/EDI_Error_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>EDI Error Mapping</label>
    <pluralLabel>EDI Error Mappings</pluralLabel>
</CustomObject>