force-app/main/default/objects/EDI_Error_Mapping__mdt/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <label>Case Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>