force-app/main/default/objects/EDI_Error_Mapping__mdt/fields/Exception_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason_Code__c</fullName>
    <description>EDI Error Code</description>
    <inlineHelpText>EDI Error Code</inlineHelpText>
    <label>Exception Reason Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>